# TensorRT_Upscaler

./: .gitignore  README.md  install.bat  pyproject.toml  requirements.txt  run.py  run_cli.bat  run_gui.bat  setup_venv.bat  update.bat
src/tensorrt_upscaler/: __init__.py  __main__.py  animated.py  cli.py  config.py  dependencies_window.py  dialogs.py  dialogs_legacy.py  dml_engine.py  engine.py  fast_io.py  gui.py  main_window.py  pytorch_engine.py  resize.py  sharpening.py  theme.py  upscaler.py  utils.py  web_extractor.py
src/tensorrt_upscaler/dialogs/: __init__.py  pytorch_options.py  resolution.py  tensorrt_options.py  web_image_dialog.py
src/tensorrt_upscaler/gui/: __init__.py  widgets.py  workers.py
